--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta name="description" content="All things web portally">
 <meta name="author" content="Portal | danielgray.me">
 <meta name="keywords" content="Daniel Gray, web">
-<link rel="shortcut icon" href="icon.ico">
+<link rel="shortcut icon" href="https://danielgray.me/icon.ico">
 </head>
 
 <body>
